[gd_scene load_steps=12 format=3 uid="uid://d28jvv4ep2thj"]

[ext_resource type="Script" path="res://player/bullet/bullet.gd" id="1_g27kv"]
[ext_resource type="Texture2D" uid="uid://cto2m44tix58r" path="res://player/bullet/particle.png" id="2_ob8p2"]

[sub_resource type="Gradient" id="Gradient_o3foa"]
offsets = PackedFloat32Array(0.677419, 1)
colors = PackedColorArray(1, 0.654902, 0.956863, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4ppef"]
gradient = SubResource("Gradient_o3foa")

[sub_resource type="Curve" id="Curve_bymow"]
_data = [Vector2(0, 0.428571), 0.0, 0.0, 0, 0, Vector2(0.368421, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_egsld"]
curve = SubResource("Curve_bymow")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ooqrx"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 6.0
angle_max = 360.0
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_min = 0.3
scale_max = 0.6
scale_curve = SubResource("CurveTexture_egsld")
color = Color(1, 0.654902, 0.956863, 1)
color_ramp = SubResource("GradientTexture1D_4ppef")

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6eh53"]
gradient = SubResource("Gradient_o3foa")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vkqoy"]
particle_flag_disable_z = true
angle_max = 360.0
spread = 180.0
initial_velocity_min = 330.0
initial_velocity_max = 480.0
gravity = Vector3(0, 550, 0)
scale_min = 0.03
scale_max = 0.1
scale_curve = SubResource("CurveTexture_egsld")
color_ramp = SubResource("GradientTexture1D_6eh53")
hue_variation_max = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rq582"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_max = 360.0
initial_velocity_min = 15.0
initial_velocity_max = 30.0
gravity = Vector3(0, -200, 0)
scale_min = 0.1
scale_max = 0.2
scale_curve = SubResource("CurveTexture_egsld")
color_ramp = SubResource("GradientTexture1D_6eh53")
hue_variation_min = -0.1
hue_variation_max = 0.1

[sub_resource type="CircleShape2D" id="CircleShape2D_so1m3"]
radius = 60.0

[node name="Bullet" type="RayCast2D"]
target_position = Vector2(2000, 0)
script = ExtResource("1_g27kv")
flash_color = Color(0.376471, 0, 0.478431, 1)
knockback_strenght = 350
knockback_radius = 95

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, -1, 39, -1)
width = 0.0
default_color = Color(1, 0.654902, 0.956863, 1)

[node name="CastParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_ooqrx")
texture = ExtResource("2_ob8p2")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="HitParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_vkqoy")
texture = ExtResource("2_ob8p2")
lifetime = 0.4
one_shot = true
explosiveness = 1.0
trail_enabled = true
trail_lifetime = 0.04

[node name="BeamParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_rq582")
texture = ExtResource("2_ob8p2")
lifetime = 0.35
one_shot = true
trail_enabled = true
trail_lifetime = 0.04

[node name="RemovalTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DisableTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Knockback" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="KnockbackShape" type="CollisionShape2D" parent="Knockback"]
shape = SubResource("CircleShape2D_so1m3")
disabled = true

[connection signal="timeout" from="RemovalTimer" to="." method="_on_removal_timer_timeout"]
[connection signal="timeout" from="DisableTimer" to="." method="disable_knockback"]
[connection signal="body_entered" from="Knockback" to="." method="_on_knockback_body_entered"]
